<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Add views specific to volume conversion -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_volume"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:id="@+id/volumeInputEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint"
            android:autofillHints="number"
            android:inputType="numberDecimal"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/volumeConversionSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/conversion_units_volume"

            />

        <Button
            android:id="@+id/volumeConvertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_button"
            />

        <TextView
            android:id="@+id/volumeOutputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/result"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />



    </LinearLayout>

</LinearLayout>
