<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">


        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint"
            android:autofillHints="number"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/conversionSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/conversion_units"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/outputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/result"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>



    </LinearLayout>



</LinearLayout>
